/*
 * This file was generated by the Gradle 'init' task.
 *
 * This project uses @Incubating APIs which are subject to change.
 */

plugins {
    id 'java-library'
    id 'maven-publish'
}

repositories {
    mavenLocal()
    maven {
        url = uri('https://repo.maven.apache.org/maven2/')
    }
}

dependencies {
    api libs.com.fasterxml.jackson.core.jackson.core
    api libs.com.fasterxml.jackson.core.jackson.annotations
    api libs.com.fasterxml.jackson.core.jackson.databind
    api libs.org.slf4j.slf4j.api
    api libs.org.bouncycastle.bcprov.jdk18on
    api libs.org.bouncycastle.bcpkix.jdk18on
    compileOnly libs.jakarta.validation.jakarta.validation.api
    compileOnly libs.jakarta.servlet.jakarta.servlet.api
    compileOnly libs.jakarta.websocket.jakarta.websocket.api
    compileOnly libs.jakarta.websocket.jakarta.websocket.client.api
    compileOnly libs.jakarta.enterprise.jakarta.enterprise.cdi.api
}

group = 'io.greenscreens'
version = '7.0.0'
description = 'Green Screens Quark Engine'

java {
    sourceCompatibility = JavaVersion.VERSION_21
    targetCompatibility = JavaVersion.VERSION_21
}

publishing {
    publications {
        maven(MavenPublication) {
            from(components.java)
        }
    }
}

tasks.withType(JavaCompile) {
    options.encoding = 'UTF-8'
}

tasks.withType(Javadoc) {
    options.encoding = 'UTF-8'
}

tasks.withType(JavaCompile).each {
    it.options.compilerArgs.add('--enable-preview')
}